--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Caperea @ GitHub</title>
+    <title>Privacy Policy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>git.caperea.com</h1>
+        <h1>Privacy Policy</h1>
         <p></p>
       </header>
 
@@ -31,34 +31,28 @@
       <nav>
         <ul></ul>
       </nav>
-      <section>
-        <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <h1>Privacy Policy</h1>
+    <p>This Privacy Policy aims to transparently explain how Caperea ("we", "our") collects, uses, and protects the information of users ("you", "your") of Calculator HD ("the app").</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+    <h2>1. Data Collection and Use</h2>
+    <p>We are committed to protecting your privacy and data. We do not collect any personal information directly from the app. All data collection relies on the anonymous statistical data collection mechanism provided by the iOS operating system. This may include anonymized information such as app usage frequency, features used, and app crash reports, aimed at helping us improve app performance and user experience.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+    <h2>2. Data Sharing</h2>
+    <p>We do not sell, trade, or otherwise transfer your data to external parties. The anonymous statistical data collection we rely on strictly adheres to Apple's privacy policy and guidelines.</p>
 
-<h3>Designer Templates</h3>
+    <h2>3. Data Protection</h2>
+    <p>We take appropriate security measures to protect the data stored and processed, to prevent unauthorized access, alteration, disclosure, or destruction.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+    <h2>4. Third-Party Links</h2>
+    <p>Our app may contain links to third-party websites or services, which have privacy practices independent from us. Therefore, we bear no responsibility for the content or privacy policies of these links. We encourage you to read the privacy policy of every website you visit.</p>
 
-<h3>Rather Drive Stick?</h3>
+    <h2>5. Changes to Our Privacy Policy</h2>
+    <p>We reserve the right to update this Privacy Policy at any time. We will notify of any changes through the app or our website. Your continued use of the app will be deemed as your acceptance of those changes.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+    <h2>6. Contact Us</h2>
+    <p>If you have any questions about our privacy policy, please contact us at badtoyx@gmail.com.</p>
 
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
       </footer>
