added wrapper class back

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p></p>
       </header>
 
-    <div>
+    <div class="wrapper">
 
     <h1>Privacy Policy</h1>
     <p>This Privacy Policy aims to transparently explain how Caperea ("we", "our") collects, uses, and protects the information of users ("you", "your") of Calculator HD ("the app").</p>
